# ecommerce-video-agent-studio

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  graph.py  planner.py  runtime.py  state.py
backend/app/agents/modeling/: __init__.py  contracts.py  generation.py  provider.py  review.py
backend/app/agents/models/: __init__.py  config_model.py  llm_models.py
backend/app/api/: __init__.py  deps.py  routes.py  schemas.py
backend/app/application/: __init__.py  creative_agent.py  creative_agent_port.py  creative_decision.py  creative_plan.py  creative_runs.py  storyboard_prompts.py
backend/app/core/: config.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  creative.py  project.py
backend/app/services/: projects.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_workflow_tables.py  0002_replace_workflow_with_creative_runs.py  0003_add_langgraph_thread_id.py  0004_mark_legacy_assets_unverified.py  0005_restore_workflow_run_records.py  0006_preserve_legacy_run_history.py  0007_add_prompt_revision.py
backend/scripts/: init_database.py  print_creative_script_node.py  print_product_understanding_node.py  print_start_to_creative_script.py
backend/tests/: test_architecture_boundaries.py  test_creative_run_mapping.py  test_hermes_field_descriptions.py  test_migrations.py  test_prompt_versions.py
backend/tests/api/: test_storyboard_prompt_review.py
backend/tests/services/: test_projects.py
(+57 files in other folders)
